@@ -5,3 +5,6 @@ PORT=
 
 #Db
 MONGODB_URL=
+
+#Paypal
+PAYPAL_CLIENT_ID=
