@@ -26,6 +26,25 @@ router.post("/", isAuth, async (req, res) => {
     const newOrderCreated = await newOrder.save();
     res.status(201).send({ message: "New Order Created", data: newOrderCreated });
 });
-  
+
+router.put("/:id/pay", isAuth, async (req, res) => {
+  const order = await Order.findById(req.params.id);
+  if (order) {
+    order.isPaid = true;
+    order.paidAt = Date.now();
+    order.payment = {
+      paymentMethod: 'paypal',
+      paymentResult: {
+        payerID: req.body.payerID,
+        orderID: req.body.orderID,
+        paymentID: req.body.paymentID
+      }
+    }
+    const updatedOrder = await order.save();
+    res.send({ message: 'Order Paid.', order: updatedOrder });
+  } else {
+    res.status(404).send({ message: 'Order not found.' })
+  }
+});
 
 module.exports = router
