@@ -14,6 +14,9 @@ app.use(express.json())
 app.use("/api/users", userRoute)
 app.use("/api/products", productRoute);
 app.use("/api/orders", orderRoute);
+app.get("/api/config/paypal", (req, res) => {
+    res.send(config.PAYPAL_CLIENT_ID);
+})
 
 async function start()
 {
