@@ -384,3 +384,6 @@ tbody>tr:nth-child(odd){
     font-weight: bold;
     color: #c04000;
 }
+.placeorder-actions-payment > div {
+  width: 100%;
+}
