@@ -1,16 +1,27 @@
 import React, { useEffect } from 'react';
 import { useDispatch, useSelector } from 'react-redux';
 import { Link } from 'react-router-dom';
-import { detailsOrder } from '../redux/actions/orderActions';
+import { detailsOrder, payOrder } from '../redux/actions/orderActions';
+import { PaypalButton } from '../components/PaypalButton';
 
 export const OrderPage = (props) => {
 
-    const dispatch = useDispatch();
-    useEffect(() => {
+  const orderPay = useSelector(state => state.orderPay);
+  const { loading: loadingPay, success: successPay, error: errorPay } = orderPay;
+  const dispatch = useDispatch();
+  useEffect(() => {
+    if (successPay) {
+      props.history.push("/profile");
+    } else {
       dispatch(detailsOrder(props.match.params.id));
-      return () => {
-      };
-    }, []);
+    }
+    return () => {
+    };
+  }, [successPay]);
+
+  const handleSuccessPayment = (paymentResult) => {
+    dispatch(payOrder(order, paymentResult));
+  }
 
     const orderDetails = useSelector(state => state.orderDetails);
     const { loading, order, error } = orderDetails;
@@ -60,7 +71,7 @@ export const OrderPage = (props) => {
                   </div>
                   :
                   order.orderItems.map(item =>
-                    <li key={item.product}>
+                    <li key={item._id}>
                       <div className="cart-image">
                         <img src={item.image} alt="product" />
                       </div>
@@ -88,8 +99,13 @@ export const OrderPage = (props) => {
         </div>
         <div className="placeorder-action">
           <ul>
-            <li>
-              <button className="button primary full-width" onClick={payHandler} >Pay Now</button>
+            <li className="placeorder-actions-payment">
+              {loadingPay && <div>Finishing Payment...</div>}
+              {!order.isPaid &&
+                <PaypalButton
+                  amount={order.totalPrice}
+                  onSuccess={handleSuccessPayment} />
+              }
             </li>
             <li>
               <h3>Order Summary</h3>
