@@ -1,18 +1,14 @@
 import axios from "axios";
 import {
   ORDER_CREATE_REQUEST, ORDER_CREATE_SUCCESS, ORDER_CREATE_FAIL,
-  ORDER_DETAILS_REQUEST, ORDER_DETAILS_SUCCESS, ORDER_DETAILS_FAIL
+  ORDER_DETAILS_REQUEST, ORDER_DETAILS_SUCCESS, ORDER_DETAILS_FAIL, 
+  ORDER_PAY_REQUEST, ORDER_PAY_SUCCESS, ORDER_PAY_FAIL
 } from "../types/orderConstants";
 
 const createOrder = (order) => async (dispatch, getState) => {
   try {
     dispatch({ type: ORDER_CREATE_REQUEST, payload: order });
     const { userSignin: { userInfo } } = getState();
-    const response = await axios.post("/api/orders", order, {
-        headers:
-        { Authorization: `Bearer ${userInfo.token}` }
-      });
-      console.log('response ', response)
     const { data: { data: newOrder } } = await axios.post("/api/orders", order, {
       headers:
       { Authorization: `Bearer ${userInfo.token}` }
@@ -27,7 +23,7 @@ const detailsOrder = (orderId) => async (dispatch, getState) => {
   try {
     dispatch({ type: ORDER_DETAILS_REQUEST, payload: orderId });
     const { userSignin: { userInfo } } = getState();
-    const { data } = await axios.get("/api/orders/" + orderId, {
+    const { data } = await axios.get(`/api/orders/${orderId}`, {
       headers:
         { Authorization: `Bearer ${userInfo.token}` }
     });
@@ -36,4 +32,19 @@ const detailsOrder = (orderId) => async (dispatch, getState) => {
     dispatch({ type: ORDER_DETAILS_FAIL, payload: error.message });
   }
 }
-export { createOrder, detailsOrder }; 
+
+const payOrder = (order, paymentResult) => async (dispatch, getState) => {
+  try {
+    dispatch({ type: ORDER_PAY_REQUEST, payload: paymentResult });
+    const { userSignin: { userInfo } } = getState();
+    const { data } = await axios.put(`/api/orders/${order._id}/pay`, paymentResult, {
+      headers:
+        { Authorization: 'Bearer ' + userInfo.token }
+    });
+    dispatch({ type: ORDER_PAY_SUCCESS, payload: data })
+  } catch (error) {
+    dispatch({ type: ORDER_PAY_FAIL, payload: error.message });
+  }
+}
+
+export { createOrder, detailsOrder, payOrder}; 
