@@ -1,6 +1,7 @@
 import {
     ORDER_CREATE_REQUEST, ORDER_CREATE_SUCCESS, ORDER_CREATE_FAIL,
-    ORDER_DETAILS_REQUEST, ORDER_DETAILS_SUCCESS, ORDER_DETAILS_FAIL
+    ORDER_DETAILS_REQUEST, ORDER_DETAILS_SUCCESS, ORDER_DETAILS_FAIL, 
+    ORDER_PAY_REQUEST, ORDER_PAY_SUCCESS, ORDER_PAY_FAIL
   } from "./types/orderConstants";
   
   
@@ -34,4 +35,23 @@ import {
       default: return state;
     }
   }
-  export { orderCreateReducer, orderDetailsReducer } 
+
+  const orderPayReducer = (state = {
+    order: {
+      orderItems: [],
+      shipping: {},
+      payment: {}
+    }
+  }, action) => {
+    switch (action.type) {
+      case ORDER_PAY_REQUEST:
+        return { loading: true };
+      case ORDER_PAY_SUCCESS:
+        return { loading: false, success: true };
+      case ORDER_PAY_FAIL:
+        return { loading: false, error: action.payload };
+      default: return state;
+    }
+  }
+
+  export { orderCreateReducer, orderDetailsReducer, orderPayReducer } 
