@@ -4,4 +4,8 @@ export const ORDER_CREATE_FAIL = 'ORDER_CREATE_FAIL';
 
 export const ORDER_DETAILS_REQUEST = 'ORDER_DETAILS_REQUEST';
 export const ORDER_DETAILS_SUCCESS = 'ORDER_DETAILS_SUCCESS';
-export const ORDER_DETAILS_FAIL = 'ORDER_DETAILS_FAIL'; 
+export const ORDER_DETAILS_FAIL = 'ORDER_DETAILS_FAIL';
+
+export const ORDER_PAY_REQUEST = 'ORDER_PAY_REQUEST';
+export const ORDER_PAY_SUCCESS = 'ORDER_PAY_SUCCESS';
+export const ORDER_PAY_FAIL = 'ORDER_PAY_FAIL'; 
